# FluxVoice

./: .gitignore  QUICKSTART.md  README.md  package-lock.json  package.json  setup.bat
.github/workflows/: build.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/audio/: mod.rs  recorder.rs
src-tauri/src/azure/: mod.rs  openai.rs  speech.rs
src-tauri/src/config/: mod.rs  store.rs
src-tauri/src/hotkey/: manager.rs  mod.rs
src-tauri/src/input/: injector.rs  mod.rs
src/components/ConfigPage/: ConfigPage.tsx  LanguageSelector.tsx  TranscriptionHistory.tsx  UsageStats.tsx
src/components/FloatingWindow/: FloatingWindow.tsx  IdleAnimation.tsx  ProcessingAnimation.tsx  StatusIndicator.tsx  Waveform.tsx
src/components/common/: Button.tsx  Input.tsx  Toggle.tsx
src/hooks/: useAudioRecording.ts  useConfig.ts  useTranscriptionHistory.ts  useWaveform.ts
src/store/: appStore.ts
src/types/: api.ts  config.ts
src/utils/: audioStorage.ts
