[package]
name = "flux-voice"
version = "0.1.0"
description = "Voice input method with Azure transcription and OpenAI polishing"
authors = ["FluxVoice Team"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flux_voice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
global-hotkey = "0.6"
enigo = "0.2"
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["json", "multipart"] }
bytes = "1.0"
log = "0.4"
env_logger = "0.11"
audiopus = "0.2"
ogg = "0.9"

[target.'cfg(windows)'.dependencies]
clipboard-win = "5.0"
windows = { version = "0.58", features = ["Win32_UI_WindowsAndMessaging"] }

